[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player Sprits/Jumpling.png" type="Texture" id=1]
[ext_resource path="res://Player Sprits/Walking left.png" type="Texture" id=2]
[ext_resource path="res://Player Sprits/Crouching.png" type="Texture" id=3]
[ext_resource path="res://Player Sprits/Climbing left.png" type="Texture" id=4]
[ext_resource path="res://Player Sprits/Climbing right.png" type="Texture" id=5]
[ext_resource path="res://Player Sprits/leg up right.png" type="Texture" id=6]
[ext_resource path="res://Player Sprits/Right leg walking.png" type="Texture" id=7]
[ext_resource path="res://Player Sprits/Left leg up.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "air",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "climb",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.3006
height = 143.61

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 56.681, 95.6651 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.184314, 0.372549, 0.615686, 1 )
position = Vector2( 4.39476, 2.63541 )
scale = Vector2( 0.0553203, 0.0687654 )
frames = SubResource( 1 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0276489, 18.741 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ground_check" type="RayCast2D" parent="."]
position = Vector2( 20.215, 74.648 )
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 3

[node name="player_checker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_checker"]
position = Vector2( 3.943, 18.917 )
shape = SubResource( 3 )

[node name="Fade_Timer" type="Timer" parent="."]

[connection signal="body_entered" from="player_checker" to="." method="_on_player_checker_body_entered"]
[connection signal="timeout" from="Fade_Timer" to="." method="_on_Fade_Timer_timeout"]
